--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ body {
   padding: 0; }
 
 .page1 {
-  background-color: red;
+  background-color: #ed4343;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -109,7 +109,9 @@ body {
     width: 75px;
     height: 75px;
     border-radius: 50%;
-    background: white; }
+    background: white;
+    -webkit-animation: border-pulse 2s infinite ease-in-out;
+            animation: border-pulse 2s infinite ease-in-out; }
 
 .page2, .page4 {
   background-color: black;
@@ -122,7 +124,8 @@ body {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100%; }
+  width: 100%;
+  height: 100vh; }
   .page2 form, .page4 form {
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -135,6 +138,18 @@ body {
     -webkit-flex: 1;
         -ms-flex: 1;
             flex: 1; }
+  .page2 fieldset, .page4 fieldset {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    width: 100%;
+    border: none; }
   .page2 input, .page4 input {
     padding: 0.5rem 0.5rem;
     display: -webkit-flex;
@@ -159,36 +174,19 @@ body {
     color: white;
     font-weight: bold;
     font-size: 1.75rem;
-    margin: 5%; }
+    margin: 5% 0; }
   .page2 h3, .page4 h3 {
-    color: white; }
+    color: white;
+    font-weight: bold;
+    margin-bottom: 5%; }
 
-::-webkit-input-placeholder {
-  color: #ed4343; }
+.page4 h2 {
+  margin-bottom: 0; }
 
-:-moz-placeholder {
-  color: #ed4343;
-  opacity: 1; }
-
-::-moz-placeholder {
-  color: #ed4343;
-  opacity: 1; }
-
-:-ms-input-placeholder {
-  color: #ed4343; }
-
-fieldset {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  width: 100%;
-  border: none; }
+.page4 textarea {
+  margin: 20px 0 0 0;
+  height: 150px;
+  font-size: 1rem; }
 
 .page3 {
   display: -webkit-flex;
@@ -200,16 +198,47 @@ fieldset {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100%; }
-  .page3 form {
-    background-color: black;
-    width: 100%; }
+  width: 100%;
+  height: 100vh; }
+  .page3 ul {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding: 0 2rem;
+    width: 100%;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    overflow-y: auto; }
+    .page3 ul li {
+      margin: 10px 0; }
   .page3 button {
-    background-color: red;
+    background-color: #ed4343;
     color: white;
     margin: 5% solid black;
-    display: block;
-    width: 100%; }
+    width: 100%;
+    height: 3rem;
+    font-size: 1rem; }
+  .page3 div {
+    background-color: black;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 2rem;
+    width: 100%;
+    overflow-y: auto; }
+  .page3 .header {
+    background-color: white;
+    text-align: center; }
   .page3 h2 {
     font-weight: bold;
     font-size: 1.75rem; }
@@ -221,7 +250,45 @@ fieldset {
   text-transform: uppercase; }
 
 .name.ng-invalid.ng-dirty, .age.ng-invalid.ng-dirty, .occupation.ng-invalid.ng-dirty, .alienType.ng-invalid.ng-dirty, .actionTaken.ng-invalid.ng-dirty {
-  border: 2px solid red; }
+  border: 2px solid #ed4343; }
 
 .name.ng-valid.ng-dirty, .age.ng-valid.ng-dirty, .occupation.ng-valid.ng-dirty, .alienType.ng-valid.ng-dirty, .actionTaken.ng-valid.ng-dirty {
   border: 2px solid green; }
+
+::-webkit-input-placeholder {
+  color: #ed4343;
+  padding-left: 10px; }
+
+:-moz-placeholder {
+  color: #ed4343;
+  opacity: 1;
+  padding-left: 10px; }
+
+::-moz-placeholder {
+  color: #ed4343;
+  opacity: 1;
+  padding-left: 10px; }
+
+:-ms-input-placeholder {
+  color: #ed4343;
+  padding-left: 10px; }
+
+@-webkit-keyframes border-pulse {
+  0% {
+    box-shadow: 0 0 0 1rem rgba(255, 255, 255, 0.1), 0 0 0 2rem rgba(255, 255, 255, 0.15), 0 0 0 3rem rgba(255, 255, 255, 0.2); }
+  50% {
+    box-shadow: 0 0 0 1.25rem rgba(255, 255, 255, 0.1), 0 0 0 2.75rem rgba(255, 255, 255, 0.1), 0 0 0 4rem rgba(255, 255, 255, 0); }
+  75% {
+    box-shadow: 0 0 0 1.5rem rgba(255, 255, 255, 0.1), 0 0 0 3rem rgba(255, 255, 255, 0), 0 0 0 5rem rgba(255, 255, 255, 0); }
+  100% {
+    box-shadow: 0 0 0 1.75rem rgba(255, 255, 255, 0), 0 0 0 3.75rem rgba(255, 255, 255, 0), 0 0 0 6rem rgba(255, 255, 255, 0); } }
+
+@keyframes border-pulse {
+  0% {
+    box-shadow: 0 0 0 1rem rgba(255, 255, 255, 0.1), 0 0 0 2rem rgba(255, 255, 255, 0.15), 0 0 0 3rem rgba(255, 255, 255, 0.2); }
+  50% {
+    box-shadow: 0 0 0 1.25rem rgba(255, 255, 255, 0.1), 0 0 0 2.75rem rgba(255, 255, 255, 0.1), 0 0 0 4rem rgba(255, 255, 255, 0); }
+  75% {
+    box-shadow: 0 0 0 1.5rem rgba(255, 255, 255, 0.1), 0 0 0 3rem rgba(255, 255, 255, 0), 0 0 0 5rem rgba(255, 255, 255, 0); }
+  100% {
+    box-shadow: 0 0 0 1.75rem rgba(255, 255, 255, 0), 0 0 0 3.75rem rgba(255, 255, 255, 0), 0 0 0 6rem rgba(255, 255, 255, 0); } }
