--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,7 +4,6 @@
 // @import "variables";
 // @import "mixin";
 
-
 /*Add the following at top of all CSS*/
 *{
   box-sizing: border-box;
@@ -20,7 +19,7 @@ body {
   padding: 0;
 }
 .page1 {
-  background-color: red;
+  background-color: #ed4343;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -42,7 +41,7 @@ body {
     height: 75px;
     border-radius: 50%;
     background: white;
-    // animation: circle 1s infinite ease-in-out;
+    animation: border-pulse 2s infinite ease-in-out;
   }
 }
 .page2, .page4 {
@@ -51,12 +50,20 @@ body {
   flex-direction: column;
   align-items: center;
   width:100%;
+  height: 100vh;
   form {
     display: flex;
     flex-direction: column;
     padding: 0 2rem;
     width: 100%;
     flex: 1;
+  }
+  fieldset {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    width: 100%;
+    border: none;
   }
   input {
     padding: 0.5rem 0.5rem;
@@ -93,55 +100,62 @@ body {
     color: white;
     font-weight: bold;
     font-size: 1.75rem;
-    margin: 5%;
+    margin: 5% 0;
   }
   h3 {
     color: white;
+    font-weight: bold;
+    margin-bottom: 5%;
   }
 }
-// placeholder color//////////////
-::-webkit-input-placeholder {
-  // WebKit, Blink, Edge
-  color: #ed4343;
-}
-:-moz-placeholder {
-  // Mozilla Firefox 4 to 18
-  color: #ed4343;
-  opacity: 1;
-}
-::-moz-placeholder {
-  // Mozilla Firefox 19+
-  color: #ed4343;
-  opacity: 1;
-}
-:-ms-input-placeholder {
-  color: #ed4343;
-}
-////////////////////////////////////
-fieldset {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  width: 100%;
-  border: none;
+.page4 {
+  h2 {
+    margin-bottom: 0;
+  }
+  textarea {
+    margin: 20px 0 0 0;
+    height: 150px;
+    font-size: 1rem;
+  }
 }
 .page3 {
   display: flex;
   flex-direction: column;
   align-items: center;
   width:100%;
-  form {
-    background-color: black;
+  height: 100vh;
+  ul, {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 2rem;
     width: 100%;
+    flex: 1;
+    overflow-y: auto;
+    li {
+      margin: 10px 0;
+    }
   }
   button, {
-
-    background-color: red;
+    background-color: #ed4343;
     color: white;
     margin: 5% solid black;
-    display: block;
     width: 100%;
+    height: 3rem;
+    font-size: 1rem;
     }
+  div {
+      background-color: black;
+      display: flex;
+      flex-direction: column;
+      padding: 2rem;
+      width: 100%;
+      overflow-y: auto;
+  }
+  .header {
+    background-color: white;
+    text-align: center;
+  }
   h2 {
     font-weight: bold;
     font-size: 1.75rem;
@@ -156,45 +170,66 @@ fieldset {
 }
 .name, .age, .occupation, .alienType, .actionTaken {
   &.ng-invalid.ng-dirty {
-    border: 2px solid red;
+    border: 2px solid #ed4343;
   }
   &.ng-valid.ng-dirty {
     border: 2px solid green;
   }
 }
+// placeholder color//////////////////
+::-webkit-input-placeholder {
+  // WebKit, Blink, Edge
+  color: #ed4343;
+  padding-left: 10px;
+}
+:-moz-placeholder {
+  // Mozilla Firefox 4 to 18
+  color: #ed4343;
+  opacity: 1;
+  padding-left: 10px;
+}
+::-moz-placeholder {
+  // Mozilla Firefox 19+
+  color: #ed4343;
+  opacity: 1;
+  padding-left: 10px;
+}
+:-ms-input-placeholder {
+  color: #ed4343;
+  padding-left: 10px;
+}
+//////////////////////////////////////
 
 
+// for input validation and the button on the main screen //////
+@keyframes border-pulse {
+  0%   {
+	box-shadow:
+		0 0 0 1rem rgba(255, 255, 255, 0.1),
+		0 0 0 2rem rgba(255, 255, 255, 0.15),
+		0 0 0 3rem rgba(255, 255, 255, 0.2);
+  }
+  50%  {
+	box-shadow:
+		0 0 0 1.25rem rgba(255, 255, 255, 0.1),
+		0 0 0 2.75rem rgba(255, 255, 255, 0.1),
+		0 0 0 4rem rgba(255, 255, 255, 0);
+	}
+ 75%  {
+	box-shadow:
+		0 0 0 1.50rem rgba(255, 255, 255, 0.1),
+		0 0 0 3rem rgba(255, 255, 255, 0),
+		0 0 0 5rem rgba(255, 255, 255, 0);
+	}
+  100% {
+	box-shadow:
+		0 0 0 1.75rem rgba(255, 255, 255, 0),
+		0 0 0 3.75rem rgba(255, 255, 255, 0),
+		0 0 0 6rem rgba(255, 255, 255, 0);
+   }
+}
 
-// @group here are the animations for project 4!
-// (for your input validation and the button on the main screen).
-// The input validation animations wil only work if you use the
-// validation strategy I demonstrated at the end of the day yesterday.
-// @keyframes border-pulse {
-//   0%   {
-// 	box-shadow:
-// 		0 0 0 1rem rgba(255, 255, 255, 0.1),
-// 		0 0 0 2rem rgba(255, 255, 255, 0.15),
-// 		0 0 0 3rem rgba(255, 255, 255, 0.2);
-//   }
-//   50%  {
-// 	box-shadow:
-// 		0 0 0 1.25rem rgba(255, 255, 255, 0.1),
-// 		0 0 0 2.75rem rgba(255, 255, 255, 0.1),
-// 		0 0 0 4rem rgba(255, 255, 255, 0);
-// 	}
-//  75%  {
-// 	box-shadow:
-// 		0 0 0 1.50rem rgba(255, 255, 255, 0.1),
-// 		0 0 0 3rem rgba(255, 255, 255, 0),
-// 		0 0 0 5rem rgba(255, 255, 255, 0);
-// 	}
-//   100% {
-// 	box-shadow:
-// 		0 0 0 1.75rem rgba(255, 255, 255, 0),
-// 		0 0 0 3.75rem rgba(255, 255, 255, 0),
-// 		0 0 0 6rem rgba(255, 255, 255, 0);
-//    }
-// }
+
 // @keyframes invalid-input {
 // 	0% {
 // 		box-shadow:
