--- a/scss/main.scss
+++ b/scss/main.scss
@@ -168,13 +168,17 @@ body {
 .uppercase {
   text-transform: uppercase;
 }
+// color change for valid/invalid response
 .name, .age, .occupation, .alienType, .actionTaken {
   &.ng-invalid.ng-dirty {
-    border: 2px solid #ed4343;
+    border: 4px solid #ed4343;
   }
   &.ng-valid.ng-dirty {
-    border: 2px solid green;
+    border: 4px solid green;
   }
+}
+code {
+  color: white;
 }
 // placeholder color//////////////////
 ::-webkit-input-placeholder {
