--- a/scss/main_comments.scss
+++ b/scss/main_comments.scss
@@ -1,8 +1,16 @@
+// Comments left in for educational purposes
+
+// To import other scss files (underscore in front):
 @import "reset";
 @import "fonts";
+// @import "variables";
+// @import "mixin";
+
+/*Add the following at top of all CSS*/
 *{
   box-sizing: border-box;
 }
+
 html {
   font-family: 'raleway', Arial, sans-serif;
   font-size: 18px;
@@ -65,6 +73,16 @@ body {
     width: 100%;
     margin-bottom: 1.5rem;
   }
+  // .show-validation {
+  //   transition: 0.5s linear all;
+  // }
+  // .show-validation {
+  //   input, select, textarea {
+  //     &.ng-invalid {
+  //       border-radius: 0.5s infinite ease-in-out;
+  //     }
+  //   }
+  // }
   button {
     background-color: #ed4343;
     width: 100%;
@@ -152,6 +170,7 @@ body {
 .uppercase {
   text-transform: uppercase;
 }
+// color change for valid/invalid response
 .name, .age, .occupation, .alienType, .actionTaken {
   &.ng-invalid.ng-dirty {
     border: 4px solid #ed4343;
@@ -163,17 +182,20 @@ body {
 code {
   color: white;
 }
+// placeholder color//////////////////
 ::-webkit-input-placeholder {
   // WebKit, Blink, Edge
   color: #ed4343;
   padding-left: 10px;
 }
 :-moz-placeholder {
+  // Mozilla Firefox 4 to 18
   color: #ed4343;
   opacity: 1;
   padding-left: 10px;
 }
 ::-moz-placeholder {
+  // Mozilla Firefox 19+
   color: #ed4343;
   opacity: 1;
   padding-left: 10px;
@@ -182,6 +204,10 @@ code {
   color: #ed4343;
   padding-left: 10px;
 }
+//////////////////////////////////////
+
+
+// for circle-button on welcome page, also for (but not used) on input validation //////
 @keyframes border-pulse {
   0%   {
 	box-shadow:
@@ -208,3 +234,122 @@ code {
 		0 0 0 6rem rgba(255, 255, 255, 0);
    }
 }
+
+
+// code not used:
+// @keyframes invalid-input {
+// 	0% {
+// 		box-shadow:
+// 			0 0 0 0rem rgba($red-color, 1);
+// 	}
+// 	100% {
+// 		box-shadow:
+// 			0 0 0 0.5rem rgba($red-color, 0.2);
+// 	}
+// }
+// /* Have to set height explicity on ui-view
+// to prevent collapsing during animation*/
+// .ui-view-container {
+// 	position:absolute;
+// 	width:100vw;
+// 	height:100vh;
+// }
+// [ui-view].ng-enter, [ui-view].ng-leave {
+//   position: absolute;
+//   left: 0;
+//   right: 0;
+//   -webkit-transition:all .5s ease-in-out;
+//     -moz-transition:all .5s ease-in-out;
+//     -o-transition:all .5s ease-in-out;
+//     transition:all .5s ease-in-out;
+// }
+// [ui-view].ng-enter {
+// 	.welcome & {
+// 		opacity: 0;
+// 	}
+// 	.checkin & {
+// 		opacity: 0;
+// 		-webkit-transform:translate3d(0, -2000px, 0);
+// 		-moz-transform:translate3d(0, -2000px, 0);
+// 		transform:translate3d(0, -2000px, 0);
+// 	}
+// 	.encounters & {
+// 		-webkit-transform:translate3d(200px, 0, 0);
+// 		-moz-transform:translate3d(200px, 0, 0);
+// 		transform:translate3d(200px, 0, 0);
+// 	}
+// 	.report & {
+// 		opacity:0;
+// 		-webkit-transform:translate3d(-200px, 0, 0);
+// 		-moz-transform:translate3d(-200px, 0, 0);
+// 		transform:translate3d(-200px, 0, 0);
+// 	}
+// }
+// [ui-view].ng-enter-active {
+// 	.welcome & {
+// 		opacity: 1;
+// 	}
+// 	.checkin & {
+// 		opacity: 1;
+// 		-webkit-transform:translate3d(0, 0, 0);
+// 		-moz-transform:translate3d(0, 0, 0);
+// 		transform:translate3d(0, 0, 0);
+// 	}
+// 	.encounters & {
+// 		-opacity: 1;
+// 		-webkit-transform:translate3d(0, 0, 0);
+// 		-moz-transform:translate3d(0, 0, 0);
+// 		transform:translate3d(0, 0, 0);
+// 	}
+// 	.report & {
+// 		opacity: 1;
+// 		-webkit-transform:translate3d(0, 0, 0);
+// 		-moz-transform:translate3d(0, 0, 0);
+// 		transform:translate3d(0, 0, 0);
+// 	}
+// }
+// [ui-view].ng-leave {
+// 	.welcome & {
+// 		opacity: 1;
+// 	}
+// 	.checkin & {
+// 		opacity: 1;
+// 		-webkit-transform:scale3d(1,1,1);
+// 		-moz-transform:scale3d(1,1,1);
+// 		transform:scale3d(1,1,1);
+// 	}
+// 	.encounters & {
+// 		opacity:1;
+// 		-webkit-transform:translate3d(0, 0, 0);
+// 		-moz-transform:translate3d(0, 0, 0);
+// 		transform:translate3d(0, 0, 0);
+// 	}
+// 	.report & {
+// 		opacity:1;
+// 		-webkit-transform:translate3d(0, 0, 0);
+// 		-moz-transform:translate3d(0, 0, 0);
+// 		transform:translate3d(0, 0, 0);
+// 	}
+// }
+// [ui-view].ng-leave-active {
+// 	.welcome & {
+// 		opacity: 0;
+// 	}
+// 	.checkin & {
+// 		opacity: 0;
+// 		-webkit-transform:scale3d(0,0,0);
+// 		-moz-transform:scale3d(0,0,0);
+// 		transform:scale3d(0,0,0);
+// 	}
+// 	.encounters & {
+// 		opacity:0;
+// 		-webkit-transform:translate3d(-200px, 0, 0);
+// 		-moz-transform:translate3d(-200px, 0, 0);
+// 		transform:translate3d(-200px, 0, 0);
+// 	}
+// 	.report & {
+// 		opacity:0;
+// 		-webkit-transform:translate3d(200px, 0, 0);
+// 		-moz-transform:translate3d(200px, 0, 0);
+// 		transform:translate3d(200px, 0, 0);
+// 	}
